--- a/css/style.css
+++ b/css/style.css
@@ -176,7 +176,7 @@ a{
     padding: 40px;
 }
 .project-items{
-    border: 2px solid rgb(86, 87, 86);
+    border: 2px solid rgba(70, 20, 151,1);
     border-radius: 100px;
 }
 .project-items h1{
@@ -193,7 +193,7 @@ a{
    .of-card{
     background: transparent;
     color: white;
-    /* border:2px solid green;  */
+    /* border:2px solid green; */
    }
    .of-card:hover{
      border:2px solid white; 
@@ -219,6 +219,44 @@ a{
     background:rgb(204, 121, 5);
     color: white;
 }
+
+/* gellary  */
+.gellary{
+    border: 2px solid burlywood;
+    border-radius: 100px;
+    padding: 25px;
+    margin: 5%;
+}
+
+.gellary-tittle{
+    width: 30%;
+    height: fit-content;
+    border: 2px solid rgba(255, 255, 255, .1);
+    border-radius: 30%;
+    margin: 0 35%;
+    padding: 20px 20px;
+    text-align: center;
+    color: burlywood;
+}
+
+.gellary-block{
+    margin:50px 50px 50px 200px ;
+}
+.gellary-card{
+    width: fit-content;
+    height: fit-content;
+    background-color: rgba(255, 255, 255, .1);
+    
+}
+.gellary-img{
+    width: 200px;
+    height: 200px;
+    border: 1px solid green;
+}
+
+
+
+
 
 
 /* star footer */
